[package]
name = "joestar"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["ui", "html", "javascript", "native"]
categories = ["gui"]
description = "Wry-based simple HTML5-based native UI platform for Rust"
readme = "../README.md"
repository = "https://github.com/aurantiaco-sucus/project-joestar"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
wry = "0.27.0"